# chess

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README.txt  board.cpp  board.py  build.sh  conandata.yml  conanfile.py  conanfile.txt  exception.py  figure.cpp  figure.py  game.py  install_requirements.sh  main.cpp  main.html  pyproject.toml  settings.json  tmp.sh
AI/AI/: AI.cpp  CMakeLists.txt  mnist.cpp  mnist.hpp
C++/: board.cpp
classes/: board.py  exception.py  figure.py
cmake/: chess-engine-config.cmake.in  chess-lib-config.cmake.in  silent_copy.cmake  utils.cmake
engine/: 1.txt  CMakeLists.txt  board.cpp  exceptions.cpp
engine/src/: board.cpp  board.h  exceptions.h  figure.cpp  main.cpp  main.h
example/: CMakeLists.txt  main.cpp  tmp.cpp
game/: cmd_game.py  game.py
game/classes/: board.py  figure.py  symbols.py
include/: chess-engine.h  chess-engine.hpp  chess-lib.hpp  export.h  utils.h
include/chess-engine/: chess-engine.h  chess-engine.hpp  export.h  utils.h
include/headers/: Board.hpp  ai.hpp  bishop_masks.hpp  bitboard_lines.hpp  bitboard_operations.hpp  board.hpp  check_and_checkmate.hpp  chess_operation.shpp  constants.hpp  evaluate_position.hpp  evaluating_constants.hpp  fen.hpp  king_knight_masks.h  magic_numbers.hpp  magic_numbers_constants.hpp  masks.h  masks.hpp  masks_utils.hpp  move.hpp  notations.hpp  pin_mask_magic_numbers.hpp  pst.hpp  rook_masks.hpp  transposition_table.hpp  uci.hpp  zobrist.hpp
include/headers/C functions/: bitboard_operations.h  magic_numbers.h
include/headers/magic_numbers_ganaration/: bitboard_operations.h
include/headers/magic_numbers_generators/: magic_numbers.hpp  pin_mask_magic_numbers.hpp
include/headers/masks/: bishop_masks.hpp  down_right_diagonal_pin_masks.hpp  horizontal_pin_masks.hpp  king_knight_masks.hpp  masks.hpp  masks_utils.hpp  number_of_bits.hpp  pawn_masks.hpp  pin_masks.hpp  rook_masks.hpp  up_right_diagonal_pin_masks.hpp  vertical_pin_masks.hpp
installers/windows/: load_files.sh  main.nsi  make_installer.sh  settings.json
performance/: CMakeLists.txt  common.cpp  main.cpp  main.h
performance/tests/: alpha_beta.cpp  perft.cpp
res/: chess_default_positions.json
saves/: 0IaD00.json  0IaP9P.json  0IauGj.json  data.json
scripts/: dependencies.json  install_dependencies.sh  install_paths.bat  install_paths.ps1  install_paths.sh  install_requirements.sh  install_tools.sh  make_settings.sh  wasm.sh
site/: server.py
site/css/: board.css  error_page.css  figures.css  game_page.css  main.css  main_page.css  save_page.css
site/js/: clickHandler.js  connect.js  generateBoard.js  movement.js  saveHandler.js
site/templates/: game.html  gamePage.html  mainPage.html  savePage.html
src/: board.cpp  check_mask.cpp  chess-engine.h  fen.cpp  figure.cpp  mask_to_moves.cpp  move.cpp  move_array.cpp  notations.cpp  output.cpp  path_to_res.cpp  pawn_mask.cpp  pawn_masks.cpp  resource_dir.c  uci.cpp  utils.c  zobrist.cpp
src/ai/: ai.cpp  evaluate_position.cpp  minimax.cpp  move_sorting.cpp  quiescence.cpp
src/board/: begin_and_end.cpp  board.cpp  check_and_checkmate.cpp  fen.cpp  get_legal_moves.cpp  history.cpp  output.cpp
src/magic_numbers/: bishop_magic_numbers.c  bishop_magic_numbers.cpp  down_right_pin_mask_magic_numbers.c  down_right_pin_mask_magic_numbers.cpp  generate_bishop_magic_number.c  generate_bishop_magic_numbers.c  generate_horizontal_pin_mask_magic_numbers.c  generate_magic_number.c  generate_magics.c  generate_rook_magic_number.c  generate_rook_magic_numbers.c  generate_vertical_check_mask_magic_numbers.c  horizontal_pin_mask_magic_numbers.c  horizontal_pin_mask_magic_numbers.cpp  random_generator.c  random_generator.cpp  rook_magic_numbers.c  rook_magic_numbers.cpp  set_bishop_board.c  set_rook_board.c  up_right_pin_mask_magic_numbers.c  up_right_pin_mask_magic_numbers.cpp  vertical_pin_mask_magic_numbers.c  vertical_pin_mask_magic_numbers.cpp
src/magic_numbers_generators/: bishop_magic_numbers.cpp  down_right_pin_mask_magic_numbers.cpp  horizontal_pin_mask_magic_numbers.cpp  random_generator.cpp  rook_magic_numbers.cpp  up_right_pin_mask_magic_numbers.cpp  vertical_pin_mask_magic_numbers.cpp
stateless-example/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/legal_moves/: perft_test.cpp  test.cpp
tests/legal_moves/data/: castling.json  checkmates.json  complex.json  pawns.json  promotions.json  simple_openings.json  stalemates.json  standard.json  starting_position.json
uci/: CMakeLists.txt  main.cpp
wasm-html-example/: main.html
